# file-mover

./: .gitignore  .tsbuildinfo  AGENT_INTEGRATION.md  README.md  SECURITY_FIXES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.trae/skills/file-mover-builder/: SKILL.md
.trae/skills/file-mover-developer/: SKILL.md
.trae/skills/file-mover-reviewer/: SKILL.md
.trae/skills/file-mover-workflow/: SKILL.md
src/: App.tsx  GitProxySettings.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/agent/: llm.rs  mod.rs  providers.rs  secret.rs  tools.rs
src/components/: AiAssistant.css  AiAssistant.tsx  AiConfigDrawer.css  AiConfigDrawer.tsx  AutoStartSettings.css  AutoStartSettings.tsx  CommitModal.css  CommitModal.tsx  ConfirmModal.css  ConfirmModal.tsx  DeleteConfirmModal.css  DeleteConfirmModal.tsx  GitProxySettings.css  GitProxySettings.tsx  Header.css  Header.tsx  Message.css  Message.tsx  NvmVersionManager.css  NvmVersionManager.tsx  ProjectCard.css  ProjectCard.tsx  ProjectOverview.css  ProjectOverview.tsx  ProjectSidebar.css  ProjectSidebar.tsx  ProjectTabs.css  ProjectTabs.tsx  SettingsDrawer.css  SettingsDrawer.tsx  index.ts  messageApi.ts  styles.css  variables.css
src/context/: ProjectContext.tsx
src/hooks/: index.ts  useDirectoryOperations.ts  useFileOperationEvents.ts
src/services/: agentService.ts  projectService.ts
src/types/: agent.ts  index.ts  project.ts
