[package]
name = "file-mover"
version = "1.0.0"
description = "A simple file mover tool"
authors = ["you"]
edition = "2021"
# 使用 rustc 1.84 工具链：rustc 1.95 在 Windows 上对 build script
# 调用 rustc 探测存在 std 库 bug，会导致 quote/proc-macro2 等 panic
rust-toolchain = "1.84.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "7"

# 编译性能优化配置
# 1. 增加代码生成单元数:codegen-units 越多,单 crate 编译并行度越高,速度越快
#    代价是运行时性能略降(通常 < 5%),对 GUI 工具影响极小
# 2. 关闭全量 LTO:LTO 链接时优化极慢(尤其是大项目),thin LTO 平衡速度与体积
# 3. opt-level = 3:保持运行性能
# 4. strip = true:剥离符号表,减小最终体积
# 5. panic = "abort":移除 unwind 表,减小编译与体积
# 6. 不在 release 启用 incremental:incremental 与 LTO 一起会在 Windows 上
#    因临时 pre-lto bitcode 文件被锁/被扫描而出现 os error 5 (拒绝访问)
[profile.release]
codegen-units = 16
lto = "thin"
opt-level = 3
strip = true
panic = "abort"
incremental = false

# Dev 模式也启用增量编译
[profile.dev]
codegen-units = 256
incremental = true

# CI/打包专用:体积优先时切换
# [profile.release-package]
# inherits = "release"
# lto = "fat"
# codegen-units = 1
